2009-03-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* info/filesys.c (build_infopath_from_path): new fn.
	(info_add_path): if INFOPATH includes the word "PATH",
	call the new fn.
	* doc/info-stnd.texi (Invoking Info) <directory-path>: document it.

2009-02-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Not Ending a Sentence): also mention ).

2009-01-31  Karl Berry  <karl@gnu.org>

	* autogen.sh: No need for --enable-maintainer-mode any more.

2009-01-23  Sergey Poznyakoff  <gray@gnu.org.ua>

	Fix behavior of info on invalid regular expressions.
	
	* info/search.h (search_result): New enum.
	(search, regexp_search):
	(search_forward, search_backward): Return enum search_result.
	* info/search.c (search, regexp_search):
	(search_forward, search_backward): Return enum search_result.
	All callers updated.
	* info/session.c (info_search_in_node_internal): Return enum
	search_result. All callers updated.
	(info_search_internal): Stop immediately if the search returns
	search_failure. This happens if the user specified an invalid
	regular expression.
	
	* info/dir.c, info/info-utils.c, info/man.c, info/nodes.c: Update
	uses of search functions.

2009-01-18  Karl Berry  <karl@gnu.org>

        * doc/texinfo.tex (\headitemfont): new macro, synonym for @b.
	* doc/texinfo.txi (Multitable Rows): document @headitemfont.
	Suggestion from wl, 21 Oct 2008 09:02:51.

	* doc/texinfo.tex (\doitemize): try typesetting the item mark,
	in case the user erroneously said @itemize @samp, to give an error
	earlier.  Report from Bruce Korb, help-texinfo 02 Nov 2008 10:38:30.
	* doc/texinfo.txi (itemize): document that @w{} (with the braces)
	must be used to get an empty item mark.  (Clearly no one had
	actually done this.)

	* doc/texinfo.txi (Indexing Commands): document that index
	commands should precede the indexed material.

	* doc/txirefcard.tex: update copyright date.

	* doc/texinfo.txi (@raggedright): minor tweaks.
	(Quotations and Examples): likewise.
