@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.187 2009-03-14 17:31:30 karl Exp $
+$Id: NEWS,v 1.188 2009-03-14 17:57:41 karl Exp $
 This NEWS file records noteworthy changes, very tersely.
 See the manual for detailed information.
 
@@ -32,6 +32,10 @@ one of the relevant sections:
 * info:
   . INFOPATH is determined by PATH by default, or if an element "PATH"
     is specified.
+  . xz compression supported.
+
+* install-info:
+  . xz compression supported.
 
 * texinfo.tex:
   . support some per-language hyphenation, when the underlying TeX
